--- a/cn.zh-CN/用户指南/计费管理/手动续费包年包月实例.md
+++ b/cn.zh-CN/用户指南/计费管理/手动续费包年包月实例.md
@@ -1,6 +1,6 @@
 # 手动续费包年包月实例 {#concept_26608_zh .concept}
 
-包年包月实例在到期后，请在7天内进行续费，否则链路会被释放且不可恢复。为避免影响您的业务，实例到期前请及时续费或者[开通自动续费](cn.zh-CN/用户指南/计费管理/开通自动续费.md#)。
+包年包月实例在到期后，请在7天内进行续费，否则链路会被释放且不可恢复。为避免影响您的业务，请在实例到期前及时续费或者[开通自动续费](cn.zh-CN/用户指南/计费管理/开通自动续费.md#)。
 
 **说明：** 数据迁移任务只支持按量付费，无需执行该操作。
 
@@ -10,11 +10,11 @@
 2.  在左侧导航栏，单击**数据同步**或**数据订阅**。
 3.  在目标实例的**操作**栏，单击**续费**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17080/155780137247066_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17080/155780204347066_zh-CN.png)
 
 4.  在续费页面，选择**续费时长**并勾选**数据传输服务DTS\(包月\)服务协议**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17080/155780137247072_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17080/155780204347072_zh-CN.png)
 
 5.  单击**支付**，根据提示完成支付流程。
 
