--- a/cn.zh-CN/用户指南/数据订阅/管理消费通道.md
+++ b/cn.zh-CN/用户指南/数据订阅/管理消费通道.md
@@ -4,7 +4,8 @@
 
 **说明：** 
 
--   一个订阅实例中可以创建多个消费通道，通过多个消费通道可重复消费这个实例的数据；
+-   仅Oracle订阅支持消费通道，本文仅适用于Oracle订阅。
+-   一个订阅实例中可以创建多个消费通道，通过多个消费通道可重复消费这个实例的数据。
 -   每个消费通道都可以连接多个SDK接口，但是只有一个SDK可以消费数据，其他SDK都作为备份。
 
 ## 创建消费通道 {#section_qhm_kfk_bhb .section}
@@ -14,15 +15,15 @@
 3.  在数据订阅列表页面上方，选择对应地域。
 4.  找到目标实例，单击实例ID。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155738536440685_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155797108340685_zh-CN.png)
 
 5.  打开左侧导航栏中**数据消费**，单击右上角**新增消费通道**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155738536440622_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155797108340622_zh-CN.png)
 
 6.  在创建消费通道页面，设置**消费通道名称**、**账号**和**密码**并再次**确认密码**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155738536440624_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155797108340624_zh-CN.png)
 
 7.  单击**创建**。
 
@@ -33,11 +34,11 @@
 3.  在数据订阅列表页面上方，选择对应地域。
 4.  找到目标实例，单击实例ID。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155738536440685_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155797108340685_zh-CN.png)
 
 5.  单击左侧导航栏中**数据消费**，单击**操作**下方的**修改密码**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155738536440681_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155797108340681_zh-CN.png)
 
 6.  输入**旧密码**和**新密码**并再次**确认密码**后单击**修改**。
 
@@ -48,11 +49,11 @@
 3.  在数据订阅列表页面上方，选择对应地域。
 4.  找到目标实例，单击实例ID。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155738536440685_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155797108340685_zh-CN.png)
 
 5.  单击左侧导航栏中**数据消费**，单击**操作**下方的**删除**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155738536540683_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/136635/155797108340683_zh-CN.png)
 
 6.  在弹出的删除消费通道窗口中单击**确定**。
 
