--- a/cn.zh-CN/用户指南/实例管理/升级实例配置.md
+++ b/cn.zh-CN/用户指南/实例管理/升级实例配置.md
@@ -12,20 +12,22 @@
 -   实例只能升级配置，不能降级配置。
 -   升级生效期间增量数据迁移与数据同步会出现5秒左右的延迟，请在业务低峰期操作。
 
-## 费用说明 {#section_v1q_zjc_rhb .section}
+## 费用说明 {#section_m9c_54m_nz2 .section}
 
 -   包年包月实例
 
-    **升级费用** =（**升级后实例每天的价格** - **升级前实例每天的价格**）×**升级当天到服务到期日的剩余天数**。
+    **升级费用** =（ **升级后实例每天的价格** - **升级前实例每天的价格**）×**升级当天到服务到期日的剩余天数**。
 
-    **说明：** **升级后实例每天的价格**根据升级当天到服务到期日的剩余天数决定。如果剩余天数大于（含）300天，升级后的每天价格将为年价/天数；如果升级天数小于 300 天，升级后的每天价格为月价/天数。
+    **说明：** **升级后实例每天的价格**根据升级当天到服务到期日的剩余天数决定。
 
+    -   如果剩余天数小于300天，升级后的价格为包月价格。
+    -   如果剩余天数大于（含）300天，升级后的价格为包年价格。
 -   按量付费实例
 
     计费规则不变，仍然是每小时扣费一次，按扣费时的实例配置计费。
 
 
-关于产品价格，详情请参考[产品定价](../cn.zh-CN/产品定价/产品定价.md#)。
+关于产品价格，详情请参考[产品定价](https://help.aliyun.com/document_detail/117780.html#concept-261679)。
 
 ## 操作步骤 { .section}
 
@@ -33,16 +35,16 @@
 2.  在左侧导航栏，单击**数据迁移**或**数据同步**。
 3.  在目标实例处单击**升级**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17078/155746732646665_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17078/155799086046665_zh-CN.png)
 
 4.  选择链路规格并勾选**数据传输服务协议**。
     -   升级数据迁移任务时，选择**迁移链路规格**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17078/155746732646663_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17078/155799086046663_zh-CN.png)
 
     -   升级数据同步作业时，选择**同步链路规格**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17078/155746732646664_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17078/155799086046664_zh-CN.png)
 
 5.  单击**去支付**或**去开通**，根据提示完成支付流程。
 
