--- a/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库连接性检查.md
+++ b/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库连接性检查.md
@@ -20,7 +20,7 @@
 
 **检测方法：**
 
--   您可以直接在源数据库部署的服务器上，使用数据迁移任务中填入的数据库账号和数据库密码连接源数据库来连接数据。如果连接正常，说明可能源数据库可能限制了来源IP。
+-   您可以直接在源数据库部署的服务器上，使用数据迁移任务中填入的数据库账号和数据库密码连接源数据库来连接数据。如果连接正常，说明源数据库可能限制了来源IP。
 -   如果源数据库为MySQL，您可以使用MySQL客户端连接源数据库后执行下述命令进行检查。
 
     ```
