--- a/cn.zh-CN/快速入门/创建数据迁移任务.md
+++ b/cn.zh-CN/快速入门/创建数据迁移任务.md
@@ -8,7 +8,7 @@
 
 ## 准备迁移账号 {#section_ksf_r4n_thb .section}
 
-创建数据迁移任务时，需要提供源实例及目标实例的数据库账号账号。
+创建数据迁移任务时，需要提供源实例及目标实例的数据库账号。
 
 ## 操作步骤 {#section_xyy_w4n_thb .section}
 
@@ -17,7 +17,7 @@
 3.  单击页面右上角的**创建迁移任务**。
 4.  配置配置迁移任务的名称，迁移的源实例及目标实例连接信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155842650947391_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547391_zh-CN.png)
 
 5.  上述配置完成后，单击**授权白名单并进入下一步**。
 
@@ -25,7 +25,7 @@
 
 6.  选择**迁移对象**和**迁移类型**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155842650947392_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547392_zh-CN.png)
 
     **说明：** 如果您迁移的对象在源数据库跟目标实例上名称不同，那么需要使用DTS提供的对象名映射功能，详情请参考[库表列映射](https://help.aliyun.com/document_detail/26628.html)。
 
@@ -34,7 +34,7 @@
     **说明：** 
 
     -   在迁移任务正式启动之前，会先进行预检查。只有预检查通过后，才能成功启动迁移任务。
-    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155842650947390_zh-CN.png)，查看具体的失败详情。根据失败原因修复后，重新进行预检查。
+    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547390_zh-CN.png)，查看具体的失败详情。根据失败原因修复后，重新进行预检查。
 8.  预检查通过后，单击**下一步**。
 9.  在购买配置确认页面，选择**链路规格**并勾选**数据传输（按量付费）服务条款**。
 10. 单击购买并启动，迁移任务正式开始。
@@ -46,6 +46,6 @@
 
         迁移任务不会自动结束，观察迁移任务的状态显示为**增量迁移无延迟**的状态时，将源库停写几分钟，等待增量迁移再次进入**增量迁移无延迟**状态，手动停止迁移任务。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155842651047393_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547393_zh-CN.png)
 
 
