--- a/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
+++ b/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
@@ -33,7 +33,7 @@
 
     支持修改需要消费数据对应的时间点。
 
-    **说明：** 您需要通过您的订阅客户端来修改消费时间点。
+    **说明：** 您需要通过您的订阅客户端来修改消费时间点，详情请参见[使用Kafka客户端消费订阅数据](../../../../cn.zh-CN/用户指南/数据订阅（新）/使用Kafka客户端消费订阅数据.md#)。
 
 -   完善的监控体系
 
