--- a/cn.zh-CN/用户指南/数据订阅（新）/新增消费组.md
+++ b/cn.zh-CN/用户指南/数据订阅（新）/新增消费组.md
@@ -15,16 +15,16 @@
 3.  在数据订阅列表页面上方，选择数据订阅实例所属地域。
 4.  定位至目标数据订阅通道，单击订阅ID。
 
-    ![单击订阅ID](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/315010/156041902248136_zh-CN.png)
+    ![单击订阅ID](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/315010/156042052848136_zh-CN.png)
 
 5.  单击左侧导航栏的**数据消费**。
 6.  在数据消费页面，单击右上角的**新增消费组**。
 
-    ![新增消费通道](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/315010/156041902248139_zh-CN.png)
+    ![新增消费通道](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/315010/156042052848139_zh-CN.png)
 
 7.  在弹出的创建消费组对话框，设置消费组信息。
 
-    ![设置消费通道](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/315010/156041902248835_zh-CN.png)
+    ![设置消费通道](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/315010/156042052848835_zh-CN.png)
 
     |配置|说明|
     |:-|:-|
@@ -38,4 +38,8 @@
     |确认密码|再次填入相同的密码。|
 
 8.  单击**创建**。
+
+## 下一步 {#section_ljh_l13_us6 .section}
+
+[使用Kafka客户端消费订阅数据](cn.zh-CN/用户指南/数据订阅（新）/使用Kafka客户端消费订阅数据.md#)
 
