--- a/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
+++ b/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
@@ -10,6 +10,10 @@
 
 为降低用户使用成本，DTS新增了消费组的功能。当多个下游需要订阅同一个数据库实例时，只需要创建多个消费组即可，多个消费组可以同时对同一个数据库实例进行数据的订阅和消费，大大降低了用户的使用成本。
 
+新版数据订阅在支持经典网络的基础上，新增了专有网络的支持。用户可以通过专有网络订阅消费数据，以获得更低的网络延迟和更高的安全性。新版数据订阅同时还支持订阅自建MySQL数据库，为自建数据库用户订阅数据提供更多的便利。
+
+**说明：** 您可以在创建数据订阅通道时选择网络类型，详情请参见[创建数据订阅通道](../../../../cn.zh-CN/用户指南/数据订阅（新）/创建数据订阅通道.md#)。
+
 **消费组特性**
 
 -   一个数据订阅实例中可以创建多个消费组，通过创建多个消费组可以实现数据的重复消费。
