--- a/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
+++ b/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
@@ -4,15 +4,30 @@
 
 原有的数据订阅功能使用成本相对较高，为提升用户体验，降低使用成本，阿里云对数据订阅功能进行升级，可实现数据的多下游重复消费。
 
-## 与原数据订阅功能的区别 {#section_nl4_yj2_xhb .section}
+## 功能特性 {#section_8nf_vju_s6x .section}
+
+-   支持多下游消费，支持数据库和数据表的过滤。详情请参见[消费组介绍](#section_v3w_ewt_bg6)。
+-   支持订阅自建MySQL数据库，为自建数据库用户订阅数据提供更多的便利。
+-   在支持经典网络的基础上，新增了专有网络的支持。用户可以通过专有网络订阅消费数据，以获得更低的网络延迟和更高的安全性。
+
+    **说明：** 您可以在创建数据订阅通道时选择网络类型，详情请参见[创建数据订阅通道](../../../../cn.zh-CN/用户指南/数据订阅（新）/创建数据订阅通道.md#)。
+
+-   支持Kafka生态，通过使用Kafka Client您可以直接消费数据订阅通道中的数据。
+
+    **说明：** 当前仅支持Kafka 0.10.0.x版本至1.1.x版本，详情请参见[使用Kafka客户端消费订阅数据](../../../../cn.zh-CN/用户指南/数据订阅（新）/使用Kafka客户端消费订阅数据.md#)。
+
+-   在数据订阅过程中，您可以动态增减订阅对象，详情请参见[修改订阅对象](../../../../cn.zh-CN/用户指南/数据订阅（新）/修改订阅对象.md#)。
+-   支持修改需要消费数据对应的时间点。
+
+    **说明：** 您需要通过您的订阅客户端来修改消费时间点。
+
+-   提供订阅通道状态、下游消费延迟的报警监控功能。您可以根据业务敏感度，自定义消费延迟报警阈值。
+
+## 消费组介绍 {#section_v3w_ewt_bg6 .section}
 
 原有的数据订阅功能在进行数据订阅时，只能有一个下游SDK消费数据，其他的SDK作为备份。如果需要对同一个源库的增量数据进行重复消费的话，则需要购买多个数据订阅实例，使用成本较高。
 
 为降低用户使用成本，DTS新增了消费组的功能。当多个下游需要订阅同一个数据库实例时，只需要创建多个消费组即可，多个消费组可以同时对同一个数据库实例进行数据的订阅和消费，大大降低了用户的使用成本。
-
-新版数据订阅在支持经典网络的基础上，新增了专有网络的支持。用户可以通过专有网络订阅消费数据，以获得更低的网络延迟和更高的安全性。新版数据订阅同时还支持订阅自建MySQL数据库，为自建数据库用户订阅数据提供更多的便利。
-
-**说明：** 您可以在创建数据订阅通道时选择网络类型，详情请参见[创建数据订阅通道](../../../../cn.zh-CN/用户指南/数据订阅（新）/创建数据订阅通道.md#)。
 
 **消费组特性**
 
@@ -27,7 +42,7 @@
 -   支持多下游消费，支持数据库和数据表的过滤。
 -   支持Kafka生态，通过使用Kafka Client您可以直接消费数据订阅通道中的数据。
 
-    **说明：** 当前仅支持Kafka 0.10.0.x版本至1.1.x版本。
+    **说明：** 当前仅支持Kafka 0.10.0.x版本至1.1.x版本，详情请参见[使用Kafka客户端消费订阅数据](../../../../cn.zh-CN/用户指南/数据订阅（新）/使用Kafka客户端消费订阅数据.md#)。
 
 -   动态增减订阅对象
 
@@ -37,7 +52,7 @@
 
     支持修改需要消费数据对应的时间点。
 
-    **说明：** 您需要通过您的订阅客户端来修改消费时间点，详情请参见[使用Kafka客户端消费订阅数据](../../../../cn.zh-CN/用户指南/数据订阅（新）/使用Kafka客户端消费订阅数据.md#)。
+    **说明：** 您需要通过您的订阅客户端来修改消费时间点。
 
 -   完善的监控体系
 
