--- a/cn.zh-CN/快速入门/创建数据订阅通道.md
+++ b/cn.zh-CN/快速入门/创建数据订阅通道.md
@@ -1,14 +1,14 @@
 # 创建数据订阅通道 {#concept_266131 .concept}
 
-数据传输服务（Data Transmission Service，简称DTS）提供的数据订阅功能简单易用，您只需在控制台上进行简单操作，即可完成整个数据订阅通道的配置。通过数据订阅功能可以实时订阅增量数据，轻松帮助业务实现轻量级缓存更新、业务异步解耦、含ETL逻辑的数据实时同步等场景。
+数据传输服务DTS（Data Transmission Service）提供的数据订阅功能简单易用，您只需在控制台上进行简单操作，即可完成整个数据订阅通道的配置。通过数据订阅功能可以实时订阅增量数据，轻松帮助业务实现轻量级缓存更新、业务异步解耦、含ETL逻辑的数据实时同步等场景。
 
 ## 注意事项 {#section_7nh_9vl_7dk .section}
 
-本文仅简单介绍数据订阅通道的通用配置流程，不同的数据源在配置数据订阅通道时略有不同。关于各类数据源的详细配置案例请参考DTS帮助文档中**用户指南手册** \> **数据订阅**目录中的文档。
+本文仅简单介绍数据订阅通道的通用配置流程，不同的数据源在配置数据订阅通道时略有不同。关于各类数据源的详细配置案例请参见DTS帮助文档中**用户指南手册** \> **数据订阅**目录中的相关文档。
 
 ## 操作步骤一 购买数据订阅通道 {#section_uz3_ju6_5du .section}
 
-根据待同步的源实例的数据库类型和地域信息购买数据订阅通道，详情请参考[购买数据订阅通道](cn.zh-CN/快速入门/购买流程.md#section_sek_ra8_w7j)。
+根据待同步的源实例的数据库类型和地域信息购买数据订阅通道，详情请参见[购买数据订阅通道](cn.zh-CN/快速入门/购买流程.md#section_sek_ra8_w7j)。
 
 ## 操作步骤二 配置数据订阅通道 {#section_3bn_24y_pal .section}
 
@@ -17,7 +17,9 @@
 3.  定位至已购买的数据订阅通道，单击该实例的**配置订阅通道**。
 4.  配置数据订阅的源实例连接信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17085/155842655147404_zh-CN.png)
+    **说明：** 关于旧版订阅和新版订阅的介绍，请参见[数据订阅](../cn.zh-CN/产品简介/功能特性/数据订阅.md#)和[数据订阅（新）](../cn.zh-CN/产品简介/功能特性/数据订阅（新）.md#)。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/314826/156160185048078_zh-CN.png)
 
 5.  上述配置完成后，单击**授权白名单并进入下一步**。
 
@@ -25,15 +27,20 @@
 
 6.  配置需要订阅的数据类型和订阅对象。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17085/155842655147405_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17085/156160185047405_zh-CN.png)
 
 7.  上述配置完成后，单击页面右下角的**预检查并启动**。
 
     **说明：** 
 
     -   在迁移任务正式启动之前，会先进行预检查。只有预检查通过后，才能成功启动迁移任务。
-    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155842655247390_zh-CN.png)，查看具体的失败详情。根据失败原因修复后，重新进行预检查。
+    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156160185147390_zh-CN.png)，查看失败详情。根据失败原因修复后，重新进行预检查。
 8.  在预检查对话框中显示**预检查通过**后，关闭预检查对话框。
 
-配置完成后，数据订阅通道会进入初始化阶段，这个阶段一般会持续1分钟左右。初始化完成后即可[查看订阅数据](https://help.aliyun.com/document_detail/26644.html)或[使用SDK订阅增量数据](https://help.aliyun.com/document_detail/26645.html)。
+配置完成后，数据订阅通道会进入初始化阶段，这个阶段一般会持续1分钟左右。
+
+## 更多信息 {#section_ree_ald_p7g .section}
+
+-   旧版订阅：[查看订阅数据](https://help.aliyun.com/document_detail/26644.html)、[使用SDK订阅增量数据](https://help.aliyun.com/document_detail/26645.html) 
+-   新版订阅：[使用Kafka客户端消费订阅数据](../cn.zh-CN/用户指南/数据订阅（新）/使用Kafka客户端消费订阅数据.md#) 
 
