--- a/cn.zh-CN/API概览/数据订阅/修改消费组密码.md
+++ b/cn.zh-CN/API概览/数据订阅/修改消费组密码.md
@@ -4,7 +4,7 @@
 
 -   本接口仅适用于新版订阅通道。
 
-    **说明：** 在调用**ConfigureSubscriptionInstance**接口时，如果传入了**SubscriptionInstanceNetworkType**参数则订阅通道被定义为新版，如果不传入该参数则订阅通道被定义为旧版。
+    **说明：** 在调用[ConfigureSubscriptionInstance](cn.zh-CN/API概览/数据订阅/配置订阅通道.md#)接口时，需要传入**SubscriptionInstanceNetworkType**参数，如果不传入该参数则订阅通道被定义为旧版。
 
 -   调用本接口时，订阅通道需处于**未启动**、**启动失败**、**正常**、**异常**状态。
 
