--- a/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库版本号检查.md
+++ b/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库版本号检查.md
@@ -10,8 +10,7 @@
 -   增量数据迁移时，支持的版本号为5.1、5.5、5.6、5.7、8.0。
 
  |
-|SQL Server| -   全量数据迁移时，支持的版本号为2005、2008、2008R2、2012、2014、2016。
--   增量数据迁移时，支持的版本号为2005、2008、2008R2、2012、2014、2016。
+|SQL Server| 2005、2008、2008R2、2012、2014、2016。
 
  |
 |Oracle| 10g、11g、12c。
