--- a/cn.zh-CN/产品简介/功能特性/数据迁移.md
+++ b/cn.zh-CN/产品简介/功能特性/数据迁移.md
@@ -24,45 +24,24 @@
 |MySQL-\>OceanBase|支持|支持|支持|
 |DB2-\>MySQL|支持|支持|支持|
 
-数据迁移任务支持的实例类型如下。
-
-|迁移任务的源实例类型|迁移任务的目标实例类型|
-|:---------|:----------|
-| -   本地自建数据库
--   ECS上的自建数据库
--   RDS实例
--   云数据库MongoDB
-
- | -   本地自建数据库
--   ECS上的自建数据库
--   RDS实例
--   云数据库MongoDB
--   POLARDB实例
--   ADS实例
--   DRDS实例
--   PetaData实例
--   Redis实例
-
- |
-
 ## 支持的数据源版本 {#section_pnr_v55_qhb .section}
 
 |数据源|源实例版本|目标实例版本|
 |:--|:----|:-----|
-|Oracle-\>MySQL|9i、10g、11g|5.1、5.5、5.6、5.7|
+|Oracle-\>MySQL|9i、10g、11g|5.1、5.5、5.6、5.7、8.0|
 |Oracle-\>RDS For PPAS|9i、10g、11g|9.3|
 |Oracle-\>DRDS|9i、10g、11g|-|
 |Oracle-\>Oracle|9i、10g、11g|9i、10g、11g|
-|MySQL -\>RDS For MySQL|5.1、5.5、5.6、5.7|5.1、5.5、5.6、5.7|
-|MySQL -\>PostgreSQL|5.1、5.5、5.6、5.7|9.4、9.5|
-|SQLServer-\>SQLServer|2008R2、2012、2014、2016|2008R2、2012、2014、2016|
+|MySQL -\>RDS For MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
+|MySQL -\>PostgreSQL|5.1、5.5、5.6、5.7、8.0|9.4、9.5|
+|SQLServer-\>SQLServer|2005、2008、2008R2、2012、2014、2016|2005、2008、2008R2、2012、2014、2016|
 |PostgreSQL-\>PostgreSQL|9.4、9.5|9.4、9.5|
 |MongoDB -\> MongoDB|3.0、3.2、3.4、3.6|3.0、3.2、3.4、3.6、4.0|
-|Redis -\> Redis|2.8|2.8|
-|MySQL-\>DRDS|5.1、5.5、5.6、5.7|-|
-|MySQL-\>PetaData|5.1、5.5、5.6、5.7|-|
-|MySQL-\>OceanBase|5.1、5.5、5.6、5.7|-|
-|DB2-\>MySQL|9.7、10.5|5.1、5.5、5.6、5.7|
+|Redis -\> Redis|2.8、3.0、3.2、4.0|2.8、3.0、3.2、4.0|
+|MySQL-\>DRDS|5.1、5.5、5.6、5.7、8.0|-|
+|MySQL-\>PetaData|5.1、5.5、5.6、5.7、8.0|-|
+|MySQL-\>OceanBase|5.1、5.5、5.6、5.7、8.0|-|
+|DB2-\>MySQL|9.7、10.5|5.1、5.5、5.6、5.7、8.0|
 
 关于数据迁移支持的地域，请参考[购买页面](https://common-buy.aliyun.com/?commodityCode=dtspost#/buy)。
 
