--- a/cn.zh-CN/产品简介/功能特性/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/数据同步.md
@@ -95,21 +95,28 @@
  | 单向同步
 
  |
+| -   RDS For MySQL实例
+-   ECS上的自建MySQL
+-   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
+
+ |AnalyticDB for PostgreSQL实例| 单向同步
+
+ |
 
 ## 支持的数据源版本 {#section_oqd_cwj_zgb .section}
 
 |数据源|源实例版本|目标实例版本|
 |:--|:----|:-----|
-|MySQL-\>MySQL|5.1、5.5、5.6、5.7|5.1、5.5、5.6、5.7|
-|MySQL-\>Elasticsearch|5.1、5.5、5.6、5.7|阿里云支持的所有Elasticsearch的版本|
-|MySQL-\>ADS|5.1、5.5、5.6、5.7|阿里云支持的所有ADS的版本|
-|MySQL-\>MaxCompute|5.1、5.5、5.6、5.7|阿里云支持的所有MaxCompute的版本|
-|MySQL-\>Datahub|5.1、5.5、5.6、5.7|阿里云支持的所有Datahub的版本|
+|MySQL-\>MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
+|MySQL-\>Elasticsearch|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有Elasticsearch的版本|
+|MySQL-\>ADS|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有ADS的版本|
+|MySQL-\>MaxCompute|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有MaxCompute的版本|
+|MySQL-\>Datahub|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有Datahub的版本|
 |DRDS-\>DRDS|阿里云支持的所有DRDS的版本|阿里云支持的所有DRDS的版本|
 |DRDS-\>ADS|阿里云支持的所有DRDS的版本|阿里云支持的所有ADS的版本|
 |DRDS-\>Datahub|阿里云支持的所有DRDS的版本|阿里云支持的所有Datahub的版本|
-|Redis-\>Redis|2.8、3.0、3.2|2.8、3.0、3.2|
-|MySQL-\>Kafka|5.1、5.5、5.6、5.7|0.10、1.0|
+|Redis-\>Redis|2.8、3.0、3.2、4.0|2.8、3.0、3.2、4.0|
+|MySQL-\>Kafka|5.1、5.5、5.6、5.7、8.0|0.10、1.0|
 
 ## 数据同步对象 {#section_qln_dwj_zgb .section}
 
@@ -206,4 +213,7 @@
 
     数据同步提供同步作业状态、同步延迟的报警监控功能。用户可以根据业务敏感度，自定义同步延迟报警阈值。
 
+-   支持多种ETL特性。
+    -   支持库表列三级对象名映射，可以实现对源跟目标实例的库名、表名、或列名不同的两个对象之间进行数据同步。
+    -   支持迁移数据过滤，可以对待同步的表设置某种SQL条件过滤要所需同步的数据。
 
