--- a/cn.zh-CN/产品简介/功能特性/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/数据同步.md
@@ -98,6 +98,7 @@
 | -   RDS For MySQL实例
 -   ECS上的自建MySQL
 -   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
+-   RDS for PostgreSQL
 
  |AnalyticDB for PostgreSQL实例| 单向同步
 
@@ -117,6 +118,7 @@
 |DRDS-\>Datahub|阿里云支持的所有DRDS的版本|阿里云支持的所有Datahub的版本|
 |Redis-\>Redis|2.8、3.0、3.2、4.0|2.8、3.0、3.2、4.0|
 |MySQL-\>Kafka|5.1、5.5、5.6、5.7、8.0|0.10、1.0|
+|RDS for PostgreSQL|9.4、9.5、9.6、10.0、10.1|不涉及|
 
 ## 数据同步对象 {#section_qln_dwj_zgb .section}
 
