--- a/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
+++ b/cn.zh-CN/产品简介/功能特性/数据订阅（新）.md
@@ -115,6 +115,6 @@ DTS支持多种语言的客户端对数据进行消费，具体如下：
 
 **说明：** 
 
--   当数据订阅通道处于当数据订阅通道处于当数据订阅通道处于当数据订阅通道处于**异常**状态时，7天之内这个任务会被DTS自动恢复。如果需要停止订阅，您可以释放数据订阅通道。
+-   当数据订阅通道处于**异常**状态时，7天之内这个任务会被DTS自动恢复。如果需要停止订阅，您可以释放数据订阅通道。
 -   释放数据订阅通道后，该通道中的数据将被释放且无法被找回，请谨慎操作。
 
