--- a/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库版本号检查.md
+++ b/cn.zh-CN/用户指南/数据迁移/预检查及修复方法/源库版本号检查.md
@@ -20,7 +20,7 @@
 -   增量数据迁移时，支持的版本号为9.4.8、9.5、9.6、10.x。
 
  |
-|MongoDB| 3.0、3.2、3.4、3.6。
+|MongoDB| 3.0、3.2、3.4、3.6、4.0。
 
  |
 |Redis| 2.8、3.0、3.2、4.0。
