--- a/cn.zh-CN/产品简介/功能特性/数据迁移.md
+++ b/cn.zh-CN/产品简介/功能特性/数据迁移.md
@@ -1,49 +1,49 @@
 # 数据迁移 {#concept_26594_zh .concept}
 
-数据迁移功能旨在帮助用户方便、快速得实现各种数据源之间的数据迁移，适用于数据上云迁移、阿里云内部跨实例数据迁移、数据库拆分扩容等业务场景。数据传输服务提供的数据迁移功能能够支持同/异构数据源之间的数据迁移，同时提供了库表列三级映射、数据过滤多种ETL特性。
+数据迁移功能旨在帮助用户方便、快速地实现各种数据源之间的数据迁移，适用于数据上云迁移、阿里云内部跨实例数据迁移、数据库拆分扩容等业务场景。数据传输服务提供的数据迁移功能能够支持同/异构数据源之间的数据迁移，同时提供了库表列三级映射、数据过滤多种ETL特性。
 
 ## 支持的数据源类型 {#section_xld_r55_qhb .section}
 
 数据迁移支持多种数据源之间的数据迁移，不同数据源的支持情况如下表。
 
-|数据源|结构迁移|全量迁移|增量迁移|
-|:--|:---|:---|:---|
-|Oracle-\>MySQL|支持|支持|支持|
-|Oracle-\>RDS For PPAS|支持|支持|支持|
-|Oracle-\>DRDS|不支持|支持|支持|
-|Oracle-\>ADS|支持|支持|支持|
-|Oracle-\>Oracle|支持|支持|支持|
-|MySQL -\>RDS For MySQL|支持|支持|支持|
-|MySQL -\>PostgreSQL|不支持|支持|支持|
-|SQLServer-\>SQLServer|支持|支持|支持|
-|PostgreSQL-\>PostgreSQL|支持|支持|支持|
-|MongoDB -\> MongoDB|支持|支持|支持|
-|Redis -\> Redis|支持|支持|支持|
-|MySQL-\>DRDS|不支持|支持|支持|
-|MySQL-\>PetaData|不支持|支持|支持|
-|MySQL-\>OceanBase|支持|支持|支持|
-|DB2-\>MySQL|支持|支持|支持|
+|源数据库|目标数据库|结构迁移|全量迁移|增量迁移|
+|:---|:----|:---|:---|:---|
+|Oracle|MySQL|支持|支持|支持|
+|Oracle|RDS for PPAS|支持|支持|支持|
+|Oracle|DRDS|不支持|支持|支持|
+|Oracle|ADS|支持|支持|支持|
+|Oracle|Oracle|支持|支持|支持|
+|MySQL|RDS for MySQL|支持|支持|支持|
+|MySQL|PostgreSQL|不支持|支持|支持|
+|SQLServer|SQLServer|支持|支持|支持|
+|PostgreSQL|PostgreSQL|支持|支持|支持|
+|MongoDB|MongoDB|支持|支持|支持|
+|Redis|Redis|支持|支持|支持|
+|MySQL|DRDS|不支持|支持|支持|
+|MySQL|PetaData|不支持|支持|支持|
+|MySQL|OceanBase|支持|支持|支持|
+|DB2|MySQL|支持|支持|支持|
 
 ## 支持的数据源版本 {#section_pnr_v55_qhb .section}
 
-|数据源|源实例版本|目标实例版本|
-|:--|:----|:-----|
-|Oracle-\>MySQL|9i、10g、11g|5.1、5.5、5.6、5.7、8.0|
-|Oracle-\>RDS For PPAS|9i、10g、11g|9.3|
-|Oracle-\>DRDS|9i、10g、11g|-|
-|Oracle-\>Oracle|9i、10g、11g|9i、10g、11g|
-|MySQL -\>RDS For MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
-|MySQL -\>PostgreSQL|5.1、5.5、5.6、5.7、8.0|9.4、9.5|
-|SQLServer-\>SQLServer|2005、2008、2008R2、2012、2014、2016|2005、2008、2008R2、2012、2014、2016|
-|PostgreSQL-\>PostgreSQL|9.4、9.5|9.4、9.5|
-|MongoDB -\> MongoDB|3.0、3.2、3.4、3.6|3.0、3.2、3.4、3.6、4.0|
-|Redis -\> Redis|2.8、3.0、3.2、4.0|2.8、3.0、3.2、4.0|
-|MySQL-\>DRDS|5.1、5.5、5.6、5.7、8.0|-|
-|MySQL-\>PetaData|5.1、5.5、5.6、5.7、8.0|-|
-|MySQL-\>OceanBase|5.1、5.5、5.6、5.7、8.0|-|
-|DB2-\>MySQL|9.7、10.5|5.1、5.5、5.6、5.7、8.0|
+|源数据库|目标数据库|源实例版本|目标实例版本|
+|:---|:----|:----|:-----|
+|Oracle|MySQL|9i、10g、11g|5.1、5.5、5.6、5.7、8.0|
+|Oracle|RDS For PPAS|9i、10g、11g|9.3|
+|Oracle|DRDS|9i、10g、11g|不涉及|
+|Oracle|Oracle|9i、10g、11g|9i、10g、11g|
+|MySQL|RDS For MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
+|MySQL|PostgreSQL|5.1、5.5、5.6、5.7、8.0|9.4、9.5|
+|SQLServer|SQLServer|2005、2008、2008R2、2012、2014、2016|2005、2008、2008R2、2012、2014、2016|
+|PostgreSQL|PostgreSQL|9.4、9.5|9.4、9.5|
+|MongoDB|MongoDB|3.0、3.2、3.4、3.6、4.0|3.0、3.2、3.4、3.6、4.0|
+|Redis|Redis|2.8、3.0、3.2、4.0|2.8、3.0、3.2、4.0|
+|MySQL|DRDS|5.1、5.5、5.6、5.7、8.0|不涉及|
+|MySQL|PetaData|5.1、5.5、5.6、5.7、8.0|不涉及|
+|MySQL|OceanBase|5.1、5.5、5.6、5.7、8.0|不涉及|
+|DB2|MySQL|9.7、10.5|5.1、5.5、5.6、5.7、8.0|
 
-关于数据迁移支持的地域，请参考[购买页面](https://common-buy.aliyun.com/?commodityCode=dtspost#/buy)。
+关于数据迁移支持的地域，请参见[购买页面](https://common-buy.aliyun.com/?commodityCode=dtspost#/buy)。
 
 ## 多种迁移方式 {#section_g5b_wx5_qhb .section}
 
@@ -64,9 +64,6 @@
 
 -   结构迁移：帮助用户将源实例中的结构对象定义一键迁移至目标实例。
 -   全量数据迁移：帮助用户将源实例中的历史存量数据迁移至目标实例。
-
-    **说明：** 当数据库类型为MySQL时，在全量迁移过程中，并发Insert会导致目标表出现空间碎片问题，全量迁移完成后目标实例的空间会比源实例空间大。
-
 -   增量数据迁移：帮助用户将迁移过程中，源实例产生的增量数据实时同步到目标实例。
 
 通过**结构迁移**＋**全量数据迁移**＋**增量数据迁移**可以简单实现业务不停服迁移。
@@ -75,8 +72,8 @@
 
 数据迁移支持多种ETL特性，主要包括：
 
--   支持库表列三级对象名映射：可以实现对源跟目标实例的库名、表名、或列名不同的两个对象之间进行数据迁移。
--   支持迁移数据过滤：用户可以对要迁移的表设置某种SQL条件过滤要迁移的数据，例如用户可以设置时间条件，只迁移最新的数据。
+-   库表列三级对象名映射：可以实现对源跟目标实例的库名、表名、或列名不同的两个对象之间进行数据迁移。
+-   迁移数据过滤：用户可以对要迁移的表设置某种SQL条件过滤要迁移的数据，例如用户可以设置时间条件，只迁移最新的数据。
 
 ## 报警机制 {#section_c4y_hz5_qhb .section}
 
@@ -84,7 +81,7 @@
 
 ## 迁移任务管理 {#section_jp5_xz5_qhb .section}
 
-迁移任务是数据传输服务进行数据迁移的基本单元。如果需要进行数据迁移，必须在数据传输服务控制台创建一个迁移任务。当创建迁移任务时，需要配置迁移的源跟目标实例连接方式，迁移对象及迁移类型等信息。用户可以在数据传输服务控制台进行迁移任务的创建、管理、停止及删除等操作。
+迁移任务是数据传输服务进行数据迁移的基本单元。如果需要进行数据迁移，必须在数据传输服务控制台创建一个迁移任务。当创建迁移任务时，需要配置迁移的源跟目标实例的连接方式，迁移对象及迁移类型等信息。用户可以在数据传输服务控制台进行迁移任务的创建、管理、停止及删除等操作。
 
 迁移任务在创建及运行过程中，不同阶段会处于不同的状态，具体如下表所示。
 
@@ -102,6 +99,6 @@
 
 ## 更多信息 {#section_plv_31v_qhb .section}
 
--   如果需要立即开始迁移数据，请登陆[DTS控制台](https://dts.console.aliyun.com/)，配置数据迁移任务。
+-   如果需要立即开始迁移数据，请登录[DTS控制台](https://dts.console.aliyun.com/)，配置数据迁移任务。
 -   如果您有应用迁移的需求，请参考[迁移工具](https://help.aliyun.com/document_detail/62349.html)。
 
