--- a/cn.zh-CN/产品简介/功能特性/数据订阅.md
+++ b/cn.zh-CN/产品简介/功能特性/数据订阅.md
@@ -1,18 +1,21 @@
 # 数据订阅 {#concept_26596_zh .concept}
 
-实时数据订阅功能旨在帮助用户获取RDS、DRDS、Oracle实时增量数据，用户能够根据自身业务需求自由消费增量数据，例如缓存更新策略、业务异步解耦、异构数据源数据实时同步及含复杂ETL的数据实时同步等多种业务场景。
+实时数据订阅功能旨在帮助用户获取RDS、DRDS、Oracle实时增量数据，用户能够根据自身业务需求自由消费增量数据，搭建/实现多种业务场景，例如缓存更新策略、业务异步解耦、异构数据源数据实时同步及含复杂ETL的数据实时等。
 
-## 支持的功能 {#section_kr5_kk1_rhb .section}
+## 支持订阅的实例类型 {#section_kr5_kk1_rhb .section}
 
--   支持公共云、金融云RDS For MySQL实例、DRDS实例的数据订阅。
--   支持经典网络、VPC网络下RDS For MySQL实例、DRDS实例的数据订阅。
--   支持线下IDC或者云厂商的自建Oracle的Redo log的数据订阅。
+-   RDS for MySQL
 
-## 支持的实例类型 {#section_b24_qk1_rhb .section}
+    支持公共云和金融云的业务环境。
 
--   RDS For MySQL
 -   DRDS
+
+    支持公共云和金融云的业务环境。
+
 -   Oracle
+
+    支持线下IDC或者云厂商的自建Oracle数据订阅。
+
 
 ## 订阅对象 {#section_asx_ml1_rhb .section}
 
@@ -30,8 +33,8 @@
 
 订阅通道在创建及运行过程中，不同阶段会处于不同的状态，具体如下表所示。
 
-|通道状态|状态说明|可进行操作|
-|:---|:---|:----|
+|通道状态|状态说明|可进行的操作|
+|:---|:---|:-----|
 |预检中|订阅通道已经完成任务配置，正在进行预检查。|删除订阅|
 |未启动|订阅通道已经通过预检查，但是还没有启动订阅。| -   开始订阅
 -   删除订阅
