--- a/cn.zh-CN/用户指南/实时同步/数据同步拓扑介绍.md
+++ b/cn.zh-CN/用户指南/实时同步/数据同步拓扑介绍.md
@@ -1,54 +1,46 @@
 # 数据同步拓扑介绍 {#concept_978516 .concept}
 
-数据同步功能支持多种同步拓扑，您可以根据业务需求规划您的同步实例。
+数据同步功能支持多种同步拓扑，您可以根据业务需求规划您的同步作业。
 
 ## 单向同步 {#section_2x3_7ww_0xy .section}
 
 在单向同步的拓扑中，为保障同步数据的一致性，对目标实例中的同步对象应只进行读操作，请勿进行修改。
 
-|拓扑类型|拓扑图|说明|
-|:---|:--|:-|
-|一对一单向同步|![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387076851087_zh-CN.png)
+-   **一对一单向同步**
 
-|无|
-|一对多单向同步|![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387076851088_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387082351087_zh-CN.png)
 
-| 您需要购买多个同步实例来实现一对多单向同步 。
+-   **一对多单向同步** 
 
- 例如，从实例A同步到实例B、实例C和实例D，那么您需要购买三个同步实例。
+    您需要购买多个同步作业来实现一对多单向同步 。例如，从实例A同步到实例B、实例C和实例D，那么您需要购买三个同步作业，如下图所示。
 
- |
-|级联单向同步|![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387076851089_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387082351088_zh-CN.png)
 
-| 您需要购买多个同步实例来实现级联单向同步。
+-   **级联单向同步** 
 
- 例如，从实例A同步到实例B，再从实例B同步到实例C，那么您需要购买两个同步实例。
+    您需要购买多个同步作业来实现级联单向同步。例如，从实例A同步到实例B，再从实例B同步到实例C，那么您需要购买两个同步作业，如下图所示。
 
- |
-|多对一单向同步|![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387076951090_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387082351089_zh-CN.png)
 
-| 您需要购买多个同步实例来实现多对一单向同步 。
+-   **多对一单向同步** 
 
- 例如，从实例B、实例C和实例D同步到实例A，那么您需要购买三个同步实例。
+    您需要购买多个同步作业来实现多对一单向同步 。例如，从实例B、实例C和实例D同步到实例A，那么您需要购买三个同步作业，如下图所示。
 
- **说明：** 为保障同步数据的一致性，每个同步实例应选择不同的同步对象。
+    **说明：** 为保障同步数据的一致性，每个同步作业应选择不同的同步对象。例如，同步作业1用来同步表1，同步作业2用来同步表2。
 
- |
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/790489/156387082451090_zh-CN.png)
+
 
 ## 双向同步 {#section_56c_5cy_dvl .section}
 
+![双向数据同步架构](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17125/156387082441047_zh-CN.png)
+
 目前DTS仅支持两个MySQL数据库之间的双向同步，暂不支持多个MySQL数据库之间的双向同步。
+
+为保障同步数据的一致性，您需要确保同一个主键/业务主键/唯一键的记录只在一个实例中更新。
 
 **说明：** 
 
 -   关于双向同步的配置案例请参见[创建RDS for MySQL实例间的双向数据同步](cn.zh-CN/用户指南/实时同步/MySQL实时同步至MySQL/RDS for MySQL实例间的双向同步.md#)。
 -   您可以将现有的单向同步升级为双向同步，详情请参见[单向同步升级至双向同步](cn.zh-CN/用户指南/实例管理/单向同步升级至双向同步.md#)。
-
-|拓扑类型|拓扑图|说明|
-|:---|:--|:-|
-|一对一双向同步|![双向数据同步架构](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17125/156387076941047_zh-CN.png)
-
-| 为保障同步数据的一致性，您需要确保同一个主键/业务主键/唯一键的记录只在一个实例中更新。
-
- |
 
