--- a/cn.zh-CN/产品简介/功能特性/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/数据同步.md
@@ -106,19 +106,21 @@
 
 ## 支持的数据源版本 {#section_oqd_cwj_zgb .section}
 
-|数据源|源实例版本|目标实例版本|
-|:--|:----|:-----|
-|MySQL-\>MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
-|MySQL-\>Elasticsearch|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有Elasticsearch的版本|
-|MySQL-\>ADS|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有ADS的版本|
-|MySQL-\>MaxCompute|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有MaxCompute的版本|
-|MySQL-\>Datahub|5.1、5.5、5.6、5.7、8.0|阿里云支持的所有Datahub的版本|
-|DRDS-\>DRDS|阿里云支持的所有DRDS的版本|阿里云支持的所有DRDS的版本|
-|DRDS-\>ADS|阿里云支持的所有DRDS的版本|阿里云支持的所有ADS的版本|
-|DRDS-\>Datahub|阿里云支持的所有DRDS的版本|阿里云支持的所有Datahub的版本|
-|Redis-\>Redis|2.8、3.0、3.2、4.0|2.8、3.0、3.2、4.0|
-|MySQL-\>Kafka|5.1、5.5、5.6、5.7、8.0|0.10、1.0|
-|RDS for PostgreSQL|9.4、9.5、9.6、10.0、10.1|不涉及|
+|源数据库|目标数据库|源库版本|目标库版本|
+|:---|:----|:---|:----|
+|MySQL|MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
+|MySQL|Elasticsearch|5.1、5.5、5.6、5.7、8.0|所有版本的Elasticsearch|
+|MySQL|ADS|5.1、5.5、5.6、5.7、8.0|所有版本的ADS|
+|MySQL|MaxCompute|5.1、5.5、5.6、5.7、8.0|所有版本的MaxCompute|
+|MySQL|Datahub|5.1、5.5、5.6、5.7、8.0|所有版本的Datahub|
+|DRDS|DRDS|所有版本的DRDS|所有版本的DRDS|
+|DRDS|ADS|所有版本的DRDS|所有版本的ADS|
+|DRDS|Datahub|所有版本的DRDS|所有版本的Datahub|
+|Redis|Redis|2.8、3.0、3.2、4.0 **说明：** 当源库为阿里云Redis实例时，数据库版本需为4.0版本。
+
+ |2.8、3.0、3.2、4.0|
+|MySQL|Kafka|5.1、5.5、5.6、5.7、8.0|0.10、1.0|
+|RDS for PostgreSQL|RDS for PostgreSQL|9.4、9.5、9.6、10.0、10.1|不涉及|
 
 ## 数据同步对象 {#section_qln_dwj_zgb .section}
 
