--- a/intl.zh-CN/产品简介/功能特性/数据同步.md
+++ b/intl.zh-CN/产品简介/功能特性/数据同步.md
@@ -120,7 +120,7 @@
 
  |2.8、3.0、3.2、4.0|
 |MySQL|Kafka|5.1、5.5、5.6、5.7、8.0|0.10、1.0|
-|PostgreSQL|AnalyticDB for PostgreSQL|9.4、9.5、9.6、10.0、10.1|不涉及|
+|RDS for PostgreSQL|AnalyticDB for PostgreSQL|9.4、10|不涉及|
 
 ## 数据同步对象 {#section_qln_dwj_zgb .section}
 
