--- a/cn.zh-CN/用户指南/数据订阅/查看订阅数据.md
+++ b/cn.zh-CN/用户指南/数据订阅/查看订阅数据.md
@@ -13,40 +13,41 @@
 2.  在左侧导航栏，单击**数据订阅**。
 3.  在数据订阅列表页面顶部，选择订阅通道所属地域。
 
-    ![选择地域](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17141/156423506851699_zh-CN.png)
+    ![选择地域](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17141/156439186651699_zh-CN.png)
 
 4.  定位至目标订阅通道，单击**操作**列的**查看订阅数据**。
 5.  在订阅数据页面，默认会展示最近一分钟内的20条订阅数据。您也可以根据筛选条件，对订阅数据进行筛选。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423506853111_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186653111_zh-CN.png)
 
     |筛选条件|说明|
     |:---|:-|
     |数据库名|填入待查询的数据库名，如果不填则查询所有数据库。|
     |表名|填入待查询的表名，如果不填则查询所有表。|
-    |列值匹配|填入待查询的列名，然后选择运算符，最后填入列值。 如果不填，则查询所有列。 **说明：** 您还可以通过单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423506853105_zh-CN.png)来添加更多的列值匹配信息。
+    |列值匹配|填入待查询的列名，然后选择运算符，最后填入列值。 如果不填，则查询所有列。 **说明：** 您还可以通过单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186653105_zh-CN.png)来添加更多的列值匹配信息。
 
- ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423506953104_zh-CN.png)
+ ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186653104_zh-CN.png)
 
 |
     |SQL类型|选择待查询的SQL类型，默认为INSERT、UPDATE、DELETE和DDL。|
     |时间|选择查询时间段。 选择的时间段必须在数据通道的数据范围以内，详情请参见页面顶部的提示信息。
 
- ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423506953110_zh-CN.png)
+ ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186653110_zh-CN.png)
 
 |
 
 6.  单击**立即查询**，获取订阅数据的记录。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423506953149_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186753149_zh-CN.png)
 
-    **说明：** 
+    |数据库类型|位点说明|时间戳说明|
+    |:----|:---|:----|
+    |RDS for MySQL|增量记录在binlog中的位置和时间点。|增量记录写入到binlog文件中时的时间戳。|
+    |Oracle|增量记录在redolog或ahieve归档日志中的位置和时间点。|增量记录写入到redolog或ahieve归档日志中时的时间戳。|
 
-    -   **位点**：增量记录在binlog中的位点，格式为*binlog\_file\_offset*@*binlog\_file\_id*。其中，*binlog\_file\_id*为binlog文件名的后缀，*binlog\_file\_offset*为binlog记录在binlog文件中的偏移量。
-    -   **时间戳**：增量记录写入到binlog文件中时的时间戳。
 7.  您可以单击某一条记录的**查看数据详情**，查看该条订阅数据的详细信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423506953124_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186753124_zh-CN.png)
 
     |字段|说明|
     |:-|:-|
@@ -59,32 +60,32 @@
 
 ## 关于前镜像和后镜像的补充说明 {#section_ifm_kwr_bi4 .section}
 
-|数据操作类型|取值说明|示例|
-|:-----|:---|:-|
-|INSERT| 前镜像的值为空。
+|数据操作类型|取值说明|
+|:-----|:---|
+|INSERT| ![INSERT数据详情](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186753162_zh-CN.png)
+
+前镜像的值为空。
 
  后镜像的值为INSERT操作写入的数据。
 
- |![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423506953162_zh-CN.png)
+ |
+|DELETE| ![DELETE数据详情](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186753163_zh-CN.png)
 
-|
-|DELETE| 前镜像的值为DELETE操作删除的数据。
+前镜像的值为DELETE操作删除的数据。
 
  后镜像的值为空。
 
- |![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423507053163_zh-CN.png)
+ |
+|UPDATE| ![UPDATE数据详情](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186753165_zh-CN.png)
 
-|
-|UPDATE| 前镜像的值为变更之前的数据。
+前镜像的值为变更之前的数据。
 
  后镜像的值为变更之后的数据。
 
  **说明：** 其中，有变化的值以红色字体来展示。
 
- |![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423507053165_zh-CN.png)
+ |
+|DDL或DML|![DDL或DML](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156439186753164_zh-CN.png)
 
-|
-|DDL或DML|数据详情中仅包含DDL或DML的相关语句。|![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17144/156423507053164_zh-CN.png)
-
-|
+数据详情中仅包含DDL或DML的相关语句。|
 
