--- a/cn.zh-CN/产品简介/功能特性/数据迁移.md
+++ b/cn.zh-CN/产品简介/功能特性/数据迁移.md
@@ -2,6 +2,8 @@
 
 数据迁移功能旨在帮助用户方便、快速地实现各种数据源之间的数据迁移，适用于数据上云迁移、阿里云内部跨实例数据迁移、数据库拆分扩容等业务场景。数据传输服务提供的数据迁移功能能够支持同/异构数据源之间的数据迁移，同时提供了库表列三级映射、数据过滤多种ETL特性。
 
+关于各类场景的迁移方案请参见[DTS数据迁移方案概览](../../../../cn.zh-CN/用户指南/数据迁移/DTS数据迁移方案概览.md#)。
+
 ## 支持的数据源类型 {#section_xld_r55_qhb .section}
 
 数据迁移支持多种数据源之间的数据迁移，不同数据源的支持情况如下表。
