--- a/cn.zh-CN/快速入门/购买流程.md
+++ b/cn.zh-CN/快速入门/购买流程.md
@@ -1,50 +1,93 @@
 # 购买流程 {#concept_26604_zh .concept}
 
-本文介绍数据传输服务中数据迁移、数据同步和数据订阅功能的购买流程。
+本文介绍数据传输服务中数据迁移任务、数据同步作业和数据订阅通道的购买流程。
+
+## 费用说明 {#section_51o_ka3_6hw .section}
+
+详情请参见[产品定价](../cn.zh-CN/产品定价/产品定价.md#)。
 
 ## 购买数据迁移任务 {#section_qt1_4lb_rhb .section}
 
 1.  登录[数据传输控制台](https://dts.console.aliyun.com/)。
 2.  在左侧导航栏，单击**数据迁移**。
-3.  在页面右上角，单击**创建迁移任务**。
-4.  完成迁移任务配置后，在弹出的购买配置确认页面，选择**链路规格**。
+3.  在迁移任务列表页面顶部，选择待迁移的目标实例的地域。
 
-    **说明：** 关于链路规格说明，详情请参考[数据迁移链路规格说明](../cn.zh-CN/产品简介/规格说明/数据迁移链路规格说明.md#)。
+    ![选择地域](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17076/156464580051034_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17076/155746493346605_zh-CN.png)
+4.  单击右上角的**创建迁移任务**。
+5.  根据提示完成迁移任务的配置，详情请参见[创建数据迁移任务](cn.zh-CN/快速入门/创建数据迁移任务.md#)。
+6.  完成迁移任务配置后，在弹出的购买配置确认页面，选择**链路规格**。
 
-5.  勾选**数据传输（按量付费）服务条款**并单击**立即购买并启动**。
-6.  根据提示完成支付流程。
+    **说明：** 关于链路规格说明，请参见[数据迁移链路规格说明](../cn.zh-CN/产品简介/规格说明/数据迁移链路规格说明.md#)。
 
-## 购买数据同步作业 {#section_l2l_34b_rhb .section}
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17076/156464580046605_zh-CN.png)
 
-1.  登录[数据传输控制台](https://dts.console.aliyun.com/)。
+7.  勾选**数据传输（按量付费）服务条款**并单击**立即购买并启动**。
+
+## 购买数据同步作业 {#section_39h_fto_gdl .section}
+
+1.  登录[数据传输服务控制台](https://dts.console.aliyun.com/)。
 2.  在左侧导航栏，单击**数据同步**。
-3.  在页面右上角，单击**创建数据同步**。
-4.  选择付费类型及数据同步作业的配置信息。
+3.  在页面右上角，单击**创建同步作业**。
+4.  在数据传输服务购买页面，选择付费类型。
+    -   预付费：在新建实例时支付费用。适合长期需求，价格比按量付费更实惠，且购买时长越长，折扣越多。
+    -   按量付费：后付费，按小时扣费。适合短期需求，用完可立即释放实例，节省费用。
+5.  选择数据同步实例的参数配置，详细说明请参见下表。
 
-    **说明：** 关于同步链路规格，详情请参考[数据同步规格说明](../cn.zh-CN/产品简介/规格说明/数据同步规格说明.md#)。
+    |类别|参数|说明|
+    |:-|:-|:-|
+    |基本配置|功能|选择**数据同步**。|
+    |源实例|选择数据同步的源实例。|
+    |源实例地域|选择源数据库所属的地域，购买后不支持更换地域，请谨慎选择。|
+    |目标实例|选择数据同步的目标实例。|
+    |目标实例地域|选择目标数据库所属的地域，购买后不支持更换地域，请谨慎选择。|
+    |同步拓扑|选择同步拓扑为**单向同步**或**双向同步**。 **说明：** 
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17076/155746493346607_zh-CN.png)
+    -   关于同步拓扑的介绍，请参见[支持的同步拓扑](../cn.zh-CN/产品简介/功能特性/数据同步.md#section_qlr_zvj_zgb)。
+    -   仅当**源实例**和**目标实例**均选择为**MySQL**时，支持**双向同步**。
+ |
+    |网络类型|数据同步服务使用的网络类型，固定为**专线**。|
+    |同步链路规格|DTS为您提供了不同性能的链路规格，以同步的记录数为衡量标准。详情请参见[数据同步规格说明](../cn.zh-CN/产品简介/规格说明/数据同步规格说明.md#)。 **说明：** 在生产环境下，建议您选择**small**及以上规格。
 
-    **说明：** 
+ |
+    |购买量|订购时长|在预付费模式下，选择包年包月实例的时长和数量，包月可选择1-9个月，包年可选择1-3年。 **说明：** 该选项仅在付费类型为**预付费**时出现。
 
-    -   **源地域**为同步链路中源实例所属地域，**目标地域**为同步链路中目标实例所属地域，订购后不支持更换地域，请谨慎选择。
-    -   仅MySQL数据库之间的同步支持**双向同步**。
-5.  单击**立即购买并启动**，根据提示完成支付流程。
+ |
+    |购买数量|一次性购买数据同步实例的数量，默认为1。如果付费类型为按量付费，一次性可购买的最大数量为99。|
 
-目前跨境同步链路默认不开放购买，如果需要购买跨境同步链路，您可以[提交工单](https://workorder.console.aliyun.com/console.htm#/ticket/add?productCode=dts)或联系您的客户经理，后端审核通过后可放开购买入口。
+6.  单击**立即购买**，根据提示完成支付流程。
+
+目前跨境同步链路默认不开放购买，如果需要购买跨境同步链路，您可以[提交工单](https://workorder.console.aliyun.com/console.htm#/ticket/add?productCode=dts)或联系您的客户经理申请。
+
+**下一步**
+
+[创建数据同步作业](cn.zh-CN/快速入门/创建数据同步作业.md#)
 
 ## 购买数据订阅通道 {#section_sek_ra8_w7j .section}
 
 1.  登录[数据传输控制台](https://dts.console.aliyun.com/)。
 2.  在左侧导航栏，单击**数据订阅**。
 3.  在页面右上角，单击**创建数据订阅**。
-4.  选择付费类型及数据订阅通道的配置信息。
+4.  在数据传输服务购买页面，选择付费类型。
+    -   预付费：在新建实例时支付费用。适合长期需求，价格比按量付费更实惠，且购买时长越长，折扣越多。
+    -   按量付费：后付费，按小时扣费。适合短期需求，用完可立即释放实例，节省费用。
+5.  选择数据订阅实例的参数配置，参数说明如下表所示。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17076/155746493346606_zh-CN.png)
+    |类别|参数|说明|
+    |:-|:-|:-|
+    |基本配置|功能|选择**数据订阅**。|
+    |订阅实例类型|选择待订阅的实例类型，当前支持订阅MySQL、DRDS、Oracle和POLARDB。 **说明：** 其中MySQL包含RDS for MySQL和自建MySQL数据库。
 
-    **说明：** **源实例地域**为数据源所属地域，订购后不支持更换，请谨慎选择。
+ |
+    |源实例地域|选择源数据库所属的地域，购买后不支持更换，请谨慎选择。|
+    |购买量|订购时长|在预付费模式下，选择包年包月实例的时长和数量，包月可选择1-9个月，包年可选择1-3年。 **说明：** 该选项仅在付费类型为**预付费**时出现。
 
-5.  单击**立即购买并启动**，根据提示完成支付流程。
+ |
+    |购买数量|一次性购买数据订阅实例的数量，默认为1。如果付费类型为按量付费，一次性可购买的最大数量为99。|
+
+6.  单击**立即购买并启动**，根据提示完成支付流程。
+
+**下一步**
+
+[创建数据订阅通道](cn.zh-CN/快速入门/创建数据订阅通道.md#)
 
