--- a/cn.zh-CN/快速入门/创建数据迁移任务.md
+++ b/cn.zh-CN/快速入门/创建数据迁移任务.md
@@ -2,6 +2,8 @@
 
 数据传输服务（Data Transmission Service，简称DTS）提供的数据迁移功能简单易用，您只需在控制台上进行简单操作，即可完成整个迁移任务的配置。
 
+关于各类场景的迁移方案请参见[DTS数据迁移方案概览](../../../../cn.zh-CN/用户指南/数据迁移/DTS数据迁移方案概览.md#)。
+
 ## 注意事项 {#section_hjz_1vn_thb .section}
 
 本文仅简单介绍数据迁移任务的通用配置流程，不同的数据源在配置迁移任务时略有不同。关于各类数据源的详细配置案例请参考DTS帮助文档中**用户指南手册** \> **数据迁移**目录中的文档。
@@ -17,7 +19,7 @@
 3.  单击页面右上角的**创建迁移任务**。
 4.  配置配置迁移任务的名称，迁移的源实例及目标实例连接信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547391_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581447391_zh-CN.png)
 
 5.  上述配置完成后，单击**授权白名单并进入下一步**。
 
@@ -25,7 +27,7 @@
 
 6.  选择**迁移对象**和**迁移类型**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547392_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581547392_zh-CN.png)
 
     **说明：** 如果您迁移的对象在源数据库跟目标实例上名称不同，那么需要使用DTS提供的对象名映射功能，详情请参考[库表列映射](https://help.aliyun.com/document_detail/26628.html)。
 
@@ -34,7 +36,7 @@
     **说明：** 
 
     -   在迁移任务正式启动之前，会先进行预检查。只有预检查通过后，才能成功启动迁移任务。
-    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547390_zh-CN.png)，查看具体的失败详情。根据失败原因修复后，重新进行预检查。
+    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581547390_zh-CN.png)，查看具体的失败详情。根据失败原因修复后，重新进行预检查。
 8.  预检查通过后，单击**下一步**。
 9.  在购买配置确认页面，选择**链路规格**并勾选**数据传输（按量付费）服务条款**。
 10. 单击购买并启动，迁移任务正式开始。
@@ -46,6 +48,6 @@
 
         迁移任务不会自动结束，观察迁移任务的状态显示为**增量迁移无延迟**的状态时，将源库停写几分钟，等待增量迁移再次进入**增量迁移无延迟**状态，手动停止迁移任务。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/155894162547393_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581547393_zh-CN.png)
 
 
