--- a/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
+++ b/cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md
@@ -22,7 +22,7 @@
 
 ## 支持的数据库及迁移类型 {#section_z6w_0g2_1qr .section}
 
-下表中各类数据库（例如MySQL、SQL Server、Oracle等）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+下表中各类自建数据库（例如MySQL、SQL Server、Oracle等）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|目标数据库|迁移类型|
 |:---|:----|:---|
