--- a/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
+++ b/cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md
@@ -23,7 +23,7 @@
 
 ## 支持的数据库/同步初始化类型/同步拓扑 {#section_ilb_mzh_t3b .section}
 
-下表中各类自建数据库（例如MySQL、SQL Server、Oracle等）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
+下表中各类自建数据库（例如MySQL、Redis）的部署位置可以是**有公网IP的自建数据库**、**ECS上的自建数据库**或**通过专线/VPN网关/智能网关接入的自建数据库**。
 
 |源数据库|目标数据库|初始化类型|同步拓扑|
 |:---|:----|:----|----|
