--- a/cn.zh-CN/快速入门/创建数据迁移任务.md
+++ b/cn.zh-CN/快速入门/创建数据迁移任务.md
@@ -1,12 +1,12 @@
 # 创建数据迁移任务 {#concept_265402 .concept}
 
-数据传输服务（Data Transmission Service，简称DTS）提供的数据迁移功能简单易用，您只需在控制台上进行简单操作，即可完成整个迁移任务的配置。
+数据传输服务DTS（Data Transmission Service）提供的数据迁移功能简单易用，您只需在控制台上进行简单操作，即可完成整个迁移任务的配置。
 
 关于各类场景的迁移方案请参见[DTS数据迁移方案概览](../../../../cn.zh-CN/用户指南/数据迁移/DTS数据迁移方案概览.md#)。
 
 ## 注意事项 {#section_hjz_1vn_thb .section}
 
-本文仅简单介绍数据迁移任务的通用配置流程，不同的数据源在配置迁移任务时略有不同。关于各类数据源的详细配置案例请参考DTS帮助文档中**用户指南手册** \> **数据迁移**目录中的文档。
+本文仅简单介绍数据迁移任务的通用配置流程，不同的数据源在配置迁移任务时略有不同。关于各类数据源的详细配置案例请参见[DTS数据迁移方案概览](../../../../cn.zh-CN/用户指南/数据迁移/DTS数据迁移方案概览.md#)。
 
 ## 准备迁移账号 {#section_ksf_r4n_thb .section}
 
@@ -17,9 +17,9 @@
 1.  登录[数据传输控制台](https://dts.console.aliyun.com/)。
 2.  在左侧导航栏，单击**数据迁移**。
 3.  单击页面右上角的**创建迁移任务**。
-4.  配置配置迁移任务的名称，迁移的源实例及目标实例连接信息。
+4.  配置迁移任务的名称，迁移的源实例和目标实例的连接信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581447391_zh-CN.png)
+    ![配置源和目标实例的连接信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156635072747391_zh-CN.png)
 
 5.  上述配置完成后，单击**授权白名单并进入下一步**。
 
@@ -27,27 +27,30 @@
 
 6.  选择**迁移对象**和**迁移类型**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581547392_zh-CN.png)
+    ![选择迁移对象和类型](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156635072747392_zh-CN.png)
 
-    **说明：** 如果您迁移的对象在源数据库跟目标实例上名称不同，那么需要使用DTS提供的对象名映射功能，详情请参考[库表列映射](https://help.aliyun.com/document_detail/26628.html)。
+    **说明：** 如果您迁移的对象在源数据库跟目标实例上名称不同，那么需要使用DTS提供的对象名映射功能，详情请参见[库表列映射](https://help.aliyun.com/document_detail/26628.html)。
 
 7.  上述配置完成后，单击页面右下角的**预检查并启动**。
 
     **说明：** 
 
     -   在迁移任务正式启动之前，会先进行预检查。只有预检查通过后，才能成功启动迁移任务。
-    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581547390_zh-CN.png)，查看具体的失败详情。根据失败原因修复后，重新进行预检查。
+    -   如果预检查失败，单击具体检查项后的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156635072847390_zh-CN.png)，查看具体的失败详情。根据失败原因修复后，重新进行预检查。
 8.  预检查通过后，单击**下一步**。
 9.  在购买配置确认页面，选择**链路规格**并勾选**数据传输（按量付费）服务条款**。
-10. 单击购买并启动，迁移任务正式开始。
+10. 单击**购买并启动**，迁移任务正式开始。
     -   全量数据迁移
 
-        手动停止迁移任务可能导致数据不一致，等待迁移任务完成即可，迁移任务会自动停止。
+        请勿手动结束迁移任务，否则可能会导致数据不完整。您只需等待迁移任务完成即可，迁移任务会自动结束。
 
     -   增量数据迁移
 
-        迁移任务不会自动结束，观察迁移任务的状态显示为**增量迁移无延迟**的状态时，将源库停写几分钟，等待增量迁移再次进入**增量迁移无延迟**状态，手动停止迁移任务。
+        迁移任务不会自动结束，您需要手动结束迁移任务。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156464581547393_zh-CN.png)
+        1.  观察迁移任务的进度变更为**增量迁移**，并显示为**无延迟**状态时，将源库停写几分钟，此时**增量迁移**的状态可能会显示延迟的时间。
+        2.  等待迁移任务的**增量迁移**再次进入**无延迟**状态后，手动结束迁移任务。
+
+            ![增量迁移无延迟](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17082/156635072847393_zh-CN.png)
 
 
