--- a/cn.zh-CN/产品定价/到期或欠费的影响.md
+++ b/cn.zh-CN/产品定价/到期或欠费的影响.md
@@ -1,21 +1,21 @@
 # 到期或欠费的影响 {#concept_26609_zh .concept}
 
+DTS实例到期或欠费后，数据传输链路将停止服务，如果7天内如果还未充值成功，系统将释放链路并删除链路中的所有数据。
+
 |实例计费类型|到期或欠费的影响|
 |:-----|:-------|
-|包年包月实例| -   包年包月实例到期后，数据传输链路将停止服务，所有控制台操作被冻结。
--   自链路冻结之日起，7天内如果还未充值成功的，系统将释放链路并删除所有数据，链路不可恢复。
+|包年包月| -   包年包月实例到期后，数据传输链路将停止服务，所有控制台操作被冻结。
+-   自链路冻结之日起，7天内如果还未充值成功的，系统将释放链路并删除所有数据，已释放的链路不可恢复。
 
  |
-|按量付费实例| -   欠费24小时内，服务可以正常使用。
+|按量付费| -   欠费24小时内，服务可以正常使用。
 -   欠费超过24小时，未能充值成功的，数据订阅链路操作会被冻结，停止提供服务。
--   自链路冻结之日起，7天内如果还未充值成功的，系统将释放链路并删除所有数据，链路不可恢复。
+-   自链路冻结之日起，7天内如果还未充值成功的，系统将释放链路并删除所有数据，已释放的链路不可恢复。
 
  |
-
-如果遇到实例到期或者欠费的情况，请及时[手动续费实例](../../../../cn.zh-CN/用户指南/计费管理/手动续费包年包月实例.md#)或者为阿里云账号[充值](https://expense.console.aliyun.com/#account/recharge/alipay)，实例即可恢复正常。
 
 ## 操作建议 {#section_rzc_f2x_rhb .section}
 
--   为避免影响业务，建议您在包年包月实例到期前[手动续费实例](../../../../cn.zh-CN/用户指南/计费管理/手动续费包年包月实例.md#)或[开通自动续费](../../../../cn.zh-CN/.md#)。
--   确保您的账户有足够的余额。
+-   为避免影响业务，建议您在包年包月实例到期前[手动续费实例](../../../../cn.zh-CN/用户指南/计费管理/手动续费包年包月实例.md#)或[开通自动续费](../../../../cn.zh-CN/用户指南/计费管理/开通自动续费.md#)。
+-   对于按量付费的实例，建议定期查看余额并[充值](https://expense.console.aliyun.com/#account/recharge/alipay)，确保您的账户资金充足。
 
