--- a/cn.zh-CN/产品简介/功能特性/数据迁移.md
+++ b/cn.zh-CN/产品简介/功能特性/数据迁移.md
@@ -4,71 +4,40 @@
 
 关于各类场景的迁移方案请参见[DTS数据迁移方案概览](../../../../cn.zh-CN/用户指南/数据迁移/DTS数据迁移方案概览.md#)。
 
-## 支持的数据源类型 {#section_xld_r55_qhb .section}
+## 支持的数据库及迁移类型 {#section_xld_r55_qhb .section}
 
-数据迁移支持多种数据源之间的数据迁移，不同数据源的支持情况如下表。
-
-|源数据库|目标数据库|结构迁移|全量迁移|增量迁移|
-|:---|:----|:---|:---|:---|
-|Oracle|MySQL|支持|支持|支持|
-|Oracle|RDS for PPAS|支持|支持|支持|
-|Oracle|DRDS|不支持|支持|支持|
-|Oracle|ADS|支持|支持|支持|
-|Oracle|Oracle|支持|支持|支持|
-|MySQL|RDS for MySQL|支持|支持|支持|
-|MySQL|PostgreSQL|不支持|支持|支持|
-|SQLServer|SQLServer|支持|支持|支持|
-|PostgreSQL|PostgreSQL|支持|支持|支持|
-|MongoDB|MongoDB|支持|支持|支持|
-|Redis|Redis|支持|支持|支持|
-|MySQL|DRDS|不支持|支持|支持|
-|MySQL|PetaData|不支持|支持|支持|
-|MySQL|OceanBase|支持|支持|支持|
-|DB2|MySQL|支持|支持|支持|
-
-## 支持的数据源版本 {#section_pnr_v55_qhb .section}
-
-|源数据库|目标数据库|源实例版本|目标实例版本|
-|:---|:----|:----|:-----|
-|Oracle|MySQL|9i、10g、11g|5.1、5.5、5.6、5.7、8.0|
-|Oracle|RDS For PPAS|9i、10g、11g|9.3|
-|Oracle|DRDS|9i、10g、11g|不涉及|
-|Oracle|Oracle|9i、10g、11g|9i、10g、11g|
-|MySQL|RDS For MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
-|MySQL|PostgreSQL|5.1、5.5、5.6、5.7、8.0|9.4、9.5|
-|SQLServer|SQLServer|2005、2008、2008R2、2012、2014、2016|2005、2008、2008R2、2012、2014、2016|
-|PostgreSQL|PostgreSQL|9.4、9.5|9.4、9.5|
-|MongoDB|MongoDB|3.0、3.2、3.4、3.6、4.0|3.0、3.2、3.4、3.6、4.0|
-|Redis|Redis|2.8、3.0、3.2、4.0|2.8、3.0、3.2、4.0|
-|MySQL|DRDS|5.1、5.5、5.6、5.7、8.0|不涉及|
-|MySQL|PetaData|5.1、5.5、5.6、5.7、8.0|不涉及|
-|MySQL|OceanBase|5.1、5.5、5.6、5.7、8.0|不涉及|
-|DB2|MySQL|9.7、10.5|5.1、5.5、5.6、5.7、8.0|
-
-关于数据迁移支持的地域，请参见[购买页面](https://common-buy.aliyun.com/?commodityCode=dtspost#/buy)。
+详情请参见[支持的数据库和迁移类型](../../../../cn.zh-CN/用户指南/数据迁移/支持的数据库和迁移类型.md#)。
 
 ## 多种迁移方式 {#section_g5b_wx5_qhb .section}
 
--   在线迁移方式
+|迁移方式|说明|
+|:---|:-|
+|在线迁移（推荐）|在线迁移要求DTS服务器能够同时跟源实例、目标实例连通，用户只需配置迁移的源、目标实例及迁移对象即可，DTS会自动完成整个数据迁移过程，支持业务不停服迁移。|
+|离线文件迁移 （正在进行大版本升级，暂不能使用）| 离线文件迁移需要先使用DTS客户端将源数据库的数据导出成文件，再将文件导入到目标实例。
 
-    默认使用在线迁移，在线迁移要求DTS服务器能够同时跟源实例、目标实例连通。在线迁移只要用户配置迁移的源、目标实例及迁移对象即可，DTS会自动完成整个数据迁移过程，支持数据不停服迁移。
+ 离线文件迁移方式不支持业务不停服迁移，为DTS服务器无法和源数据库网络不通的情况提供解决方案。
 
--   离线文件迁移方式
-
-    离线文件迁移要求用户先使用DTS客户端将源实例的数据导出成文件，再将文件导入到目标实例。 离线文件迁移方式不支持数据不停服迁移，它主要用于解决DTS服务器跟源数据库网络不通的情况。
-
+ |
 
 **说明：** 如果DTS与源实例网络连通的情况下，建议使用在线迁移方式以降低数据迁移成本。
 
-## 多种迁移步骤 {#section_rdp_ty5_qhb .section}
+## 多种迁移类型 {#section_rdp_ty5_qhb .section}
 
-数据迁移支持**结构迁移**、**全量数据迁移**及**增量数据迁移**等多种迁移步骤。
+数据迁移支持**结构迁移**、**全量数据迁移**及**增量数据迁移**，同时使用者三种迁移类型，可实现业务不停服迁移。
 
--   结构迁移：帮助用户将源实例中的结构对象定义一键迁移至目标实例。
--   全量数据迁移：帮助用户将源实例中的历史存量数据迁移至目标实例。
--   增量数据迁移：帮助用户将迁移过程中，源实例产生的增量数据实时同步到目标实例。
+|迁移类型|说明|
+|:---|:-|
+|结构迁移| DTS将源库中待迁移对象的结构定义迁移至目标库（例如表、视图、触发器、存储过程等）。
 
-通过**结构迁移**＋**全量数据迁移**＋**增量数据迁移**可以简单实现业务不停服迁移。
+ 对于异构数据库之间的结构迁移，DTS会根据源库和目标库的语法，将结构定义的语法进行转换，例如将Oracle中的number转换为MySQL中的decimal。
+
+ |
+|全量数据迁移|DTS将源库中待迁移对象的存量数据，全部迁移到目标库中。如果在配置数据迁移任务时，仅选择了结构迁移和全量数据迁移，那么在迁移过程中，源库的新增数据不会被迁移至目标库。 **说明：** 为保障数据一致性，迁移期间请勿在源库中写入新的数据。如需实现不停机迁移，您需要在配置数据迁移任务时，同时选择**结构迁移**、**全量数据迁移**和**增量数据迁移**。
+
+ |
+|增量数据迁移|DTS会先在源库中实现静态快照，然后将快照数据迁移到目标库，最后再将迁移过程中源库产生的增量数据实时同步至目标库。 **说明：** 增量数据迁移会保持实时同步的状态，所以迁移任务不会自动结束，您需要手动结束迁移任务。
+
+ |
 
 ## 多种ETL特性 {#section_tft_cz5_qhb .section}
 
