--- a/cn.zh-CN/产品简介/功能特性/数据同步.md
+++ b/cn.zh-CN/产品简介/功能特性/数据同步.md
@@ -2,133 +2,31 @@
 
 数据同步功能旨在帮助用户实现两个数据源之间的数据实时同步。数据同步功能可应用于异地多活、数据异地灾备、本地数据灾备、数据异地多活、跨境数据同步、查询与报表分流、云BI及实时数据仓库等多种业务场景。
 
-## 支持的同步拓扑 {#section_qlr_zvj_zgb .section}
+## 支持的数据库和同步拓扑 {#section_qlr_zvj_zgb .section}
 
-|数据同步源实例|数据同步目标实例|支持的同步拓扑|
-|:------|:-------|:------|
-| -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
+详情请参见[支持的数据库/同步初始化类型/同步拓扑](../../../../cn.zh-CN/用户指南/实时同步/支持的数据库__同步初始化类型__同步拓扑.md#)。
 
- | -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
+## 支持的同步对象 {#section_qln_dwj_zgb .section}
 
- | -   单向同步
--   双向同步
+同步对象的选择粒度为库、表、列，您可以根据需要选择同步的对象。
 
- |
-| -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
+## 高级特性 {#section_ld4_3wj_zgb .section}
 
- | MaxCompute实例（原ODPS）
-
- | 单向同步
+|特性|说明|相关文档|
+|:-|:-|:---|
+|动态增减同步对象|在数据同步过程中，用户可以随时增加或减少需要同步的对象。| -   [新增同步对象](../../../../cn.zh-CN/用户指南/实时同步/新增同步对象.md#)
+-   [移除同步对象](../../../../cn.zh-CN/用户指南/实时同步/移除同步对象.md#)
 
  |
-| -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
+|完善的性能查询体系|数据同步提供同步延迟、同步性能\(RPS、流量\) 趋势图，用户可以方便查看同步链路的性能趋势。|[查看同步性能](../../../../cn.zh-CN/用户指南/实时同步/查看同步性能.md#)|
+|完善的监控体系|数据同步提供同步作业状态、同步延迟的报警监控功能。用户可以根据业务敏感度，自定义同步延迟报警阈值。|[配置监控报警](../../../../cn.zh-CN/用户指南/实时同步/配置监控报警.md#)|
+|多种ETL特性| -   支持库表列三级对象名映射，可以实现对源跟目标实例的库名、表名或列名不同的两个对象之间进行数据同步。
+-   支持迁移数据过滤，可以对待同步的表设置某种SQL条件过滤要所需同步的数据。
 
- | AnalyticDB实例
-
- | 单向同步
-
- |
-| -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
-
- | Datahub实例
-
- | 单向同步
+ | -   [设置同步对象在目标实例中的名称](../../../../cn.zh-CN/用户指南/实时同步/设置同步对象在目标实例中的名称.md#)
+-   [通过SQL条件过滤待同步数据](../../../../cn.zh-CN/用户指南/实时同步/通过SQL条件过滤待同步数据.md#)
 
  |
-| -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
-
- | Elasticsearch实例
-
- | 单向同步
-
- |
-| DRDS实例
-
- | DRDS实例
-
- | 单向同步
-
- |
-| DRDS实例
-
- | AnalyticDB实例
-
- | 单向同步
-
- |
-| DRDS实例
-
- | Datahub实例
-
- | 单向同步
-
- |
-| -   ECS上的自建Redis
--   通过专线/VPN网关/智能网关接入阿里云的自建Redis
-
- | -   Redis实例
--   ECS上的自建Redis
--   通过专线/VPN网关/智能网关接入阿里云的自建Redis
-
- | 单向同步
-
- |
-| -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
-
- | -   ECS上自建的Kafka
--   通过专线/VPN网关/智能网关接入阿里云的自建Kafka
-
- | 单向同步
-
- |
-| -   RDS For MySQL实例
--   ECS上的自建MySQL
--   通过专线/VPN网关/智能网关接入阿里云的自建MySQL
--   RDS for PostgreSQL
-
- |AnalyticDB for PostgreSQL实例| 单向同步
-
- |
-
-## 支持的数据源版本 {#section_oqd_cwj_zgb .section}
-
-|源数据库|目标数据库|源库版本|目标库版本|
-|:---|:----|:---|:----|
-|MySQL|MySQL|5.1、5.5、5.6、5.7、8.0|5.1、5.5、5.6、5.7、8.0|
-|MySQL|Elasticsearch|5.1、5.5、5.6、5.7、8.0|所有版本的Elasticsearch|
-|MySQL|ADS|5.1、5.5、5.6、5.7、8.0|所有版本的ADS|
-|MySQL|MaxCompute|5.1、5.5、5.6、5.7、8.0|所有版本的MaxCompute|
-|MySQL|Datahub|5.1、5.5、5.6、5.7、8.0|所有版本的Datahub|
-|DRDS|DRDS|所有版本的DRDS|所有版本的DRDS|
-|DRDS|ADS|所有版本的DRDS|所有版本的ADS|
-|DRDS|Datahub|所有版本的DRDS|所有版本的Datahub|
-|Redis|Redis|2.8、3.0、3.2、4.0 **说明：** 当源库为阿里云Redis实例时，数据库版本需为4.0版本。
-
- |2.8、3.0、3.2、4.0|
-|MySQL|Kafka|5.1、5.5、5.6、5.7、8.0|0.10、1.0|
-|RDS for PostgreSQL|AnalyticDB for PostgreSQL|9.4、10|不涉及|
-
-## 数据同步对象 {#section_qln_dwj_zgb .section}
-
-同步对象的选择粒度可以为：库、表、列，您可以根据需要选择同步的对象。
-
-数据同步支持库、表、列名映射，您可以进行不同库名之间的数据，或两个不同表名之间的数据同步。
-
-数据同步支持列选择，您可以根据业务需求，只同步表中的某几列数据。
 
 ## 同步作业状态说明 {#section_rj3_fwj_zgb .section}
 
@@ -202,24 +100,4 @@
  |
 
 当任务处于**同步失败**或**同步初始化失败**的状态时，7天之内这个同步实例会被后台启动恢复。如要停止同步，您需要手动暂停或结束处于**同步失败**或**同步初始化失败**的任务。
-
-## 高级特性 {#section_ld4_3wj_zgb .section}
-
-数据同步支持以下高级特性，简化产品的使用难度。
-
--   动态增减同步对象。
-
-    在数据同步过程中，用户可以随时增加或减少需要同步的对象。
-
--   完善性能查询体系。
-
-    数据同步提供同步延迟、同步性能\(RPS、流量\) 趋势图，用户可以方便查看同步链路的性能趋势。
-
--   完善监控体系。
-
-    数据同步提供同步作业状态、同步延迟的报警监控功能。用户可以根据业务敏感度，自定义同步延迟报警阈值。
-
--   支持多种ETL特性。
-    -   支持库表列三级对象名映射，可以实现对源跟目标实例的库名、表名或列名不同的两个对象之间进行数据同步。
-    -   支持迁移数据过滤，可以对待同步的表设置某种SQL条件过滤要所需同步的数据。
 
